--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://kit.fontawesome.com/a3b5451c16.js" crossorigin="anonymous"></script> <!-- Font Awesome 5 Icons -->
 </html>
